# jsonparser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.h  config.h.in
headers/: Error.h  Node.h  NodeApi.h  NodeValue.h  defines.h  error.h  errorCode.h  nodeApi.h  state.h
src/: CMakeLists.txt  Error.cpp  Error.h  NodeValue.h  Parser.cpp  Parser.h  ParserKey.cpp  ParserKey.h  PreToken.h  Preparser.cpp  Preparser.h  Token.h  TokenValue.h  Validator.cpp  Validator.h  Writer.cpp  Writer.h  jsonApi.cpp  jsonApi.h  keyMapper.cpp  keyMapper.h  main.cpp  manager.cpp  manager.h  message.cpp  message.h  utils.cpp  utils.h
src/headers/: definesXML.h  node.h  state.h  token.h  utils.h
src/log/: Error.cpp  Error.h  ErrorDescription.h  ErrorDetails.h  ErrorMessage.cpp  ErrorMessage.h  ErrorStorage.cpp  ErrorStorage.h  TokenDescription.h
src/reader/: Parser.cpp  Parser.h  ParserKey.cpp  ParserKey.h  Preparser.cpp  Preparser.h  Token.h  Validator.cpp  Validator.h  utilsReader.h
src/reader/json/: PreparserJSON.cpp  PreparserJSON.h  parser.cpp  parser.h  parserKey.h  preparser.cpp  preparser.h  state.h  validator.cpp  validator.h
src/reader/xml/: ParserItem.cpp  ParserItem.h  ParserTokensXML.cpp  ParserTokensXML.h  PreparserXML.cpp  PreparserXML.h  Validator.h  ValidatorXML.h  elem.h  item.h  objectCreator.cpp  objectCreator.h  parserTokens.cpp  parserTokens.h  parserTokensXML.cpp  parserTokensXML.h  preparser.cpp  preparser.h  preparserXML.cpp  preparserXML.h  validator.h
src/writer/: Writer.cpp  Writer.h
src/writer/json/: writer.cpp  writer.h
src/writer/xml/: elemWriterCreator.cpp  elemWriterCreator.h  writer.cpp  writer.h
test/: CMakeLists.txt  baseTest.h  baseTestApi.h  config.h.in  testApi.cpp  testApiAddNode.cpp  testApiAddingNode.cpp  testApiChangeNode.cpp  testApiChangingNode.cpp  testApiError.cpp  testApiJsonToXml.cpp  testApiOtherActions.cpp  testApiRemoveNode.cpp  testApiRemovingNode.cpp  testApiXmlToJson.cpp  testParser.cpp  testPreparser.cpp  testValidator.cpp  testWriter.cpp  test_4.json  timeType.h.in  utils.h  utilsTest.h
test/data/: test_1.json  test_1.xml  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  test_7.json  test_8_complex.json
test/data/api/: addArrayToObject_4.json  addNestedObjectWithArrayToObject_5.json  addObjectToArray_7.json  addSimpleNodeToObject_4.json  changeComplexJson_8.json  changeNodeInObjectIntoArray_3.json  changeNodeInObjectIntoObject_3.json  changeNodeInObjectIntoSimpleNode_3.json  change_node_in_array_into_array_7.json  change_node_in_array_into_object_6.json  change_node_in_array_into_simple_node_2.json  clear_api_7_2.json  loadObjectJson_1.json  removeArrayFromArray_7.json  removeArrayFromObject_7.json  removeObjectAndAddForTheSameKey_3.json  removeObjectFromArray_6.json  removeObjectFromObject_3.json  test_1.json  test_3.json  test_7.json  test_8_complex.json  test_api_1.json  test_api_2_1.json  test_api_2_2.json  test_api_4_1.json  test_api_4_2.json  test_api_5.json  test_api_5_1.json  test_api_5_2.json  test_api_7.json  test_api_7_1.json  test_api_7_2.json  test_api_7_3.json  test_api_7_4.json
test/data/json/: test_1.json  test_2.json  test_5.json  test_7.json  test_from_xml_3_attr_1.json  test_from_xml_4_no_declaration.json  test_from_xml_number_content.json
test/data/writer/: test_1.json  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  test_7.json  test_8_complex.json
test/data/xml/: test_1.xml  test_2.xml  test_3.xml  test_3_attr.xml  test_3_attr_1.xml  test_3_attr_2.xml  test_4.xml  test_4_no_declaration.xml  test_5_attrs.xml  test_content_double_value.xml  test_content_few_words.xml  test_content_int_value.xml  test_content_number_value.xml  test_no_declaration_1.xml  test_no_declaration_two_values.xml  test_one_letter.xml  test_one_letter_in_content.xml
test/dataImproper/: not_allowed_after_colon.json  not_allowed_after_curly_open.json  not_allowed_after_double.json  string_not_ended_1.json  string_not_ended_2.json  test_improper_begin_json.json
test/dataImproperJson/: double_key.json  improper_end.json  not_allowed_after_bool.json  not_allowed_after_comma.json  not_allowed_after_curly_close.json  not_allowed_after_int.json  not_allowed_after_string.json  preparser_unknown_symbol_1.json  preparser_unknown_symbol_2.json  preparser_unknown_symbol_3.json
test/dataImproperXml/: angleClose.xml  angleOpen.xml  attrs_1.xml  attrs_2.xml  attrs_3.xml  attrs_4.xml  begin.xml  declaration_improper_value.xml  declaration_improper_version.xml  declaration_no_equal.xml  declaration_not_start.xml  declaration_sequence.xml  declaration_standalone.xml  end.xml  mismatchedTag.xml  mismatchedTag_2.xml  mismatchedTag_3.xml  mismatchedTag_4.xml  slashImproper_1.xml  slashImproper_2.xml  tagClose.xml  unclosedTag.xml
test/json/: testApiAddNodeJSON.cpp  testApiChangeNodeJSON.cpp  testParserJSON.cpp  testPreparserJSON.cpp  testValidatorJSON.cpp  testWriterJSON.cpp
test/xml/: testBaseXML.h  testObjectCreator.cpp  testParserItem.cpp  testParserTokens.cpp  testParserTokensError.cpp  testPreparserXML.cpp  testValidator.cpp  testValidatorXML.cpp  testWriterElemCreator.cpp  testWriterXML.cpp
